--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
-ul>li>a {
-    color: red;
+a[href^="#"] {
+    color: saddlebrown;
 }
-ul>li+li>a {
-    color: rgb(11, 212, 21);
+a[href$="last"] {
+    color: rgb(60, 255, 0);
 }
-ul>li+li+li>a {
-    color: rgb(236, 86, 131);
+a[href="#articles"] {
+    color: slategrey;
 }
+
 h3>span {
     color: rgb(11, 212, 21);
 }
