--- a/модуль 2.2/css/styles.css
+++ b/модуль 2.2/css/styles.css
@@ -1,22 +1,28 @@
+/* (0,1,1) */
 a[href^="#"] {
-    color: saddlebrown;
+    color: saddlebrown;   
 }
+/* (0,1,1) */
 a[href$="last"] {
     color: rgb(60, 255, 0);
 }
+/* (0,1,1) */
 a[href="#articles"] {
     color: slategrey;
 }
-
+/* (0,0,2) */
 h3>span {
     color: rgb(11, 212, 21);
 }
+/* (0,0,3) */
 h3+p+p {
     color: rgb(160, 158, 35);
 }
+/* (0,0,2) */
 p>span {
     color: rgb(0, 4, 255);
 }
+/* (0,0,3) */
 p>span+span {
     color: red;
 }
