--- a/модуль 3.4/css/cssfonts.css
+++ b/модуль 3.4/css/cssfonts.css
@@ -1,10 +1,10 @@
 /* Подключаемый шрифт */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700&display=swap');
 
-h2 {
+/* h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-}
+} */
 
 @font-face {
     font-family: 'roboto';
