--- a/модуль 3.4/css/cssfonts.css
+++ b/модуль 3.4/css/cssfonts.css
@@ -48,6 +48,7 @@ body {
     /* font-size: 2rem; */
     margin-bottom: 0.5em;
     font-family: 'roboto', sans-serif;
+    
 }
 .panel>h3 {
     font-size: xx-large;
@@ -61,12 +62,43 @@ h1, h2, h3 {
 .credits {
     font-family: 'roboto', sans-serif;
     font-size: 200%;
+    font-style: italic;
+    /* text-indent: 70000%; */
 }
 .bold {
     font-family: 'roboto', sans-serif;
-    font-size: 16px;
+    font-size: 21px;
+    font-weight: 700;
+    letter-spacing: -0.1em;
+    text-align: center;
+    line-height: 1.5em;
 }
 .normal {
-    font-family: 'robotor', sans-serif;
+    font-family: 'roboto', sans-serif;
     font-size: 1.45rem;
+    word-spacing: 2em;
+    text-indent: 2em;
+}
+.overtext {
+    vertical-align: 35%;
+}
+.intext {
+    vertical-align: 1%;
+}
+.undertext {
+    vertical-align: -60%;
+}
+.line {
+    text-decoration: line-through overline underline dotted black;
+}
+.underline {
+    text-decoration: underline wavy red;
+}
+.firstletter::first-letter {
+    color: red;
+    font-size: 2em;
+}
+.firstletter::first-line {
+    text-decoration: underline double blue;
+    font-weight: 700;
 }
