--- a/3.8/css/links.css
+++ b/3.8/css/links.css
@@ -10,8 +10,9 @@ p {
     font-weight: 600;
     font-style: italic;
     height: 50px;
-    width: 200px;
+    width: 250px;
     font-variant: small-caps;
+    text-align: center;
 }
 p:hover {
     cursor: help;
@@ -32,10 +33,12 @@ a:focus {
     color: indigo;
     outline: rgb(148, 148, 148);
     outline-style: dashed;   
+    outline-offset: 2px;
 }
 a:active {
     text-decoration: underline;
     font-variant: small-caps;
+
 }
 a:hover:focus {
     color: rgb(248, 234, 41);
