--- a/3.11/css/block.css
+++ b/3.11/css/block.css
@@ -14,30 +14,29 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-
-header {
+.container {
     min-width: 400px;
     max-width: 800px;
+    margin: 0 auto;
+    height: 800px;
+}
+header {
     background-color: brown;
     height: 200px;
-    margin: 0 auto;
     padding: 30px;
     overflow: auto;
 }
 main {
-    min-width: 400px;
-    max-width: 800px;
-    margin: 0 auto;
     background-color: bisque;
-    min-height: 60vh;
-    min-height: calc(100vh - 350px);
+    /* min-height: 65vh; */
+    /* min-height: calc(100vh - 350px); */
+    min-height: 100%;
     padding: 30px;
+    padding-bottom: 150px;
 }
 footer {
-    min-width: 400px;
-    max-width: 800px;
-    margin: 0 auto;
     background-color: blueviolet;
     height: 150px;
     padding: 30px;
+    margin-top: -150px;
 }
