--- a/3.11/css/block.css
+++ b/3.11/css/block.css
@@ -10,15 +10,17 @@
 html {
     font-size: 2em;
 }
-
+html,body {
+    height: 100%;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 .container {
     min-width: 400px;
     max-width: 800px;
+    min-height: 100%;
     margin: 0 auto;
-    height: 800px;
 }
 header {
     background-color: brown;
@@ -28,15 +30,16 @@ header {
 }
 main {
     background-color: bisque;
-    /* min-height: 65vh; */
-    /* min-height: calc(100vh - 350px); */
-    min-height: 100%;
-    padding: 30px;
-    padding-bottom: 150px;
+    min-height: 70vh;
+    /* padding: 30px; */
+    padding-bottom: 100px;
 }
 footer {
+    min-width: 400px;
+    max-width: 800px;
+    margin: auto;
     background-color: blueviolet;
-    height: 150px;
+    height: 100px;
     padding: 30px;
-    margin-top: -150px;
+    margin-top: -100px;
 }
