--- a/3.11/css/block.css
+++ b/3.11/css/block.css
@@ -10,16 +10,14 @@
 html {
     font-size: 2em;
 }
-html,body {
-    height: 100%;
-}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 .container {
     min-width: 400px;
     max-width: 800px;
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0 auto;
 }
 header {
@@ -30,14 +28,12 @@ header {
 }
 main {
     background-color: bisque;
-    min-height: 70vh;
-    /* padding: 30px; */
+    min-height: 100vh;
     padding-bottom: 100px;
+    margin-top: -200px;
+    padding-top: 230px;
 }
 footer {
-    min-width: 400px;
-    max-width: 800px;
-    margin: auto;
     background-color: blueviolet;
     height: 100px;
     padding: 30px;
