--- a/3.11/css/block.css
+++ b/3.11/css/block.css
@@ -17,7 +17,7 @@ body {
 .container {
     min-width: 400px;
     max-width: 800px;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     margin: 0 auto;
 }
 header {
@@ -31,7 +31,7 @@ main {
     min-height: 100vh;
     padding-bottom: 100px;
     margin-top: -200px;
-    padding-top: 230px;
+    /* padding: 230px 30px 0px 30px; */
 }
 footer {
     background-color: blueviolet;
