--- a/модудь 3.13/css/style.css
+++ b/модудь 3.13/css/style.css
@@ -20,7 +20,7 @@ th  {
     background-color: rgb(123, 123, 250);
     font-size: 20px;
     color: white; 
-    width: 200px; 
+    min-width: 200px; 
 }
 td {
     border-bottom: 1px solid rgba(128, 128, 128, 0.137);
@@ -34,7 +34,7 @@ tr:last-child td {
     border-bottom: 1px solid black;
 }
 tr:last-child td span {
-    background-color: blue;
+    background-color: rgb(26, 26, 252);
     padding: 5px;
     border: 1px solid blue;
     border-radius: 5px;
@@ -57,12 +57,13 @@ tr:nth-child(4), tr:nth-child(5) {
     height: 270px;
     display: table;
     border-spacing: 10px 0px;
+    margin-bottom: 20px;
 }
 .container div {
     display: table-row;
     text-align: center;
     vertical-align: middle;
-    width: 200px;
+    min-width: 200px;
     border-left: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid rgba(128, 128, 128, 0.329);  
@@ -95,6 +96,51 @@ tr:nth-child(4), tr:nth-child(5) {
     color: rgb(252, 173, 5);
 }
 .divtr:nth-child(4), .divtr:nth-child(5) {
+    background-color: rgba(169, 169, 169, 0.267);
+    font-weight: 600;
+}
+.table {
+    display: table;
+    border-spacing: 10px;
+}
+.table>div {
+    display: table-cell;     
+}
+.table>div div {
+    min-height: 30px;
+    padding: 5px;
+    border-bottom: 1px solid rgba(169, 169, 169, 0.267);
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    min-width: 200px;
+    text-align: center;  
+}
+.table>div div:last-child {
+    border-bottom: 1px solid black;
+    padding: 10px;
+}
+.table>div div:nth-child(2) span {
+    font-weight: 700;
+    font-size: 30px;
+    color: rgb(252, 173, 5);
+}
+.table>div div:last-child a {
+    text-decoration: none;
+    background-color: blue;
+    padding: 5px;
+    border: 1px solid blue;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+}
+.table>div div:first-child {
+    border-top: 1px solid black;
+    background-color: rgb(252, 173, 5);
+    font-weight: 700;
+    color: white;
+    font-size: 18px; 
+}
+.table>div div:nth-child(4), .table>div div:nth-child(5) {
     background-color: rgba(169, 169, 169, 0.267);
     font-weight: 600;
 }
