--- a/3.11/css/block.css
+++ b/3.11/css/block.css
@@ -14,28 +14,27 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
-.container {
+.container header,main,footer {
+    margin: 0 auto;
+    padding: 30px;
     min-width: 400px;
     max-width: 800px;
-    /* min-height: 100vh; */
-    margin: 0 auto;
 }
 header {
     background-color: brown;
     height: 200px;
-    padding: 30px;
     overflow: auto;
 }
 main {
     background-color: bisque;
     min-height: 100vh;
-    padding-bottom: 100px;
+    padding-top: 230px;
+    padding-bottom: 160px;
     margin-top: -200px;
-    /* padding: 230px 30px 0px 30px; */
+    margin-bottom: -150px;
+    
 }
 footer {
     background-color: blueviolet;
-    height: 100px;
-    padding: 30px;
-    margin-top: -100px;
+    height: 150px;
 }
