--- a/3.15/css/style.css
+++ b/3.15/css/style.css
@@ -84,6 +84,11 @@ footer {
     filter: none;
     transition: all 1s;
 }
+.photo>div:active {
+    filter: brightness(150%);
+    filter: drop-shadow(3px 3px 10px gray);
+    transition: all 1s;
+}
 .photo span {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     
